# SavingsSavior

./: requirements.txt
dashboard/: app.py  pyproject.toml
src/: file_reader.py  file_utils.py  main.py  yaml_reader.py
src/api/: fetch_asset_info.py
src/csv/: btc.csv  investment.csv  nvda.csv
src/models/: expense.py  investment.py  yaml_parseable.py
src/yaml/: expenses.yaml  investments.yaml
