[project]
name = "dashboard"
version = "0.1.0"
description = "My cool dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "nicegui>=2.14.1",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "polars>=1.27.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.5",
]
